--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -9,7 +9,6 @@
 @import "objects/o-h4.scss";
 @import "objects/o-text.scss";
 @import "objects/o-page.scss";
-@import "objects/o-single-project.scss";
 @import "../../components/Containers/o-container.scss";
 @import "../../components/Pages/Projects/c-grid.scss";
 @import "../../components/Header/c-header.scss";
@@ -24,6 +23,7 @@
 @import "../../components/Pages/Home/o-home_about.scss";
 @import "../../components/Pages/Home/o-home_work.scss";
 @import "../../components/Pages/Home/o-home_hero.scss";
+@import "../../components/Pages/SingleProject/o-single-project.scss";
 @import "../../components/Lists/c-list.scss";
 @import "../../components/Transition/c-transition-card.scss";
 @import "../../components/Stories/c-stories.scss";
