--- a/src/components/Footer/c-footer.scss
+++ b/src/components/Footer/c-footer.scss
@@ -35,7 +35,6 @@
 
 	&_bottom {
 		width: 100%;
-
 		box-sizing: border-box;
 		position: absolute;
 		bottom: 0;
@@ -43,7 +42,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: 2rem;
+		padding: 2rem 0;
 
 		nav {
 			display: none;
