--- a/src/styles/scss/objects/o-h3.scss
+++ b/src/styles/scss/objects/o-h3.scss
@@ -1,8 +1,9 @@
 h3, .o-h3 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-family: 'Canela';
 
   @include media("<=tablet") {
-    font-size: 1.4rem !important;
+    font-size: 1.8rem !important;
+    line-height: 2.2rem !important;
   }
 }
