--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -51,8 +51,8 @@
 			}
 		}
 
-
-		&_left, &_right {
+		&_left,
+		&_right {
 			p {
 				margin-top: 0;
 			}
@@ -71,11 +71,11 @@
 				margin-right: 0;
 			}
 
-			&_left, &_right {
+			&_left,
+			&_right {
 				flex: 100%;
 				margin-right: 0;
 			}
-			
 		}
 	}
 
@@ -106,6 +106,17 @@
 				width: 100%;
 				height: 100%;
 				object-fit: cover;
+			}
+		}
+	}
+
+	.o-media {
+		@include media("<=tablet") {
+			.c-grid_media {
+				grid-gap: $space-sm;
+				.c-grid_item {
+					height: 110vw !important;
+				}
 			}
 		}
 	}
