--- a/src/components/Header/c-header.scss
+++ b/src/components/Header/c-header.scss
@@ -5,9 +5,19 @@
 	left: 0;
 	height: $headerHeight;
 	z-index: 9999;
+	background: none;
+
+	.c-header_left_spacer {
+		width: 3rem;
+		height: 3rem;
+	}
+
+	.c-arrow-button {
+		width: 100%;
+		height: 100%;
+	}
 
 	.c-link {
-		height: 100%;
 		display: block;
 	}
 
@@ -33,6 +43,10 @@
 
 	&_logo {
 		width: 100px;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 	}
 
 	&_nav.desktop .c-list {
@@ -74,7 +88,7 @@
 			left: 0;
 			width: 100%;
 			content: "";
-			height: 3px;
+			height: 1px;
 			background-color: $dark;
 			transform-origin: center;
 			transition: 200ms ease;
@@ -86,7 +100,7 @@
 			left: 0;
 			width: 100%;
 			content: "";
-			height: 2px;
+			height: 1px;
 			background-color: $dark;
 			transform-origin: center;
 			transition: 200ms ease;
