--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -4,13 +4,13 @@
 }
 
 .c-grid {
-
-
-
-
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-row-gap: 10vw;
+
+	@include media("<=tablet") {
+		grid-row-gap: $space-sm;
+	}
 
 	&_item {
 		display: flex;
@@ -115,8 +115,7 @@
 			}
 
 			&:hover .c-grid_info * {
-					transform: none;
-					
+				transform: none;
 			}
 
 			.c-grid_info {
@@ -127,21 +126,18 @@
 				padding: 0;
 				margin: 0.5rem 0;
 
-				.c-grid_description, .c-grid_title {
+				.c-grid_description,
+				.c-grid_title {
 					opacity: 1;
 					color: $dark;
 					font-size: 1.4rem;
 					transform: none;
 					margin: 0;
-					
-
-
 				}
 
 				.c-grid_description {
 					align-self: center;
 				}
-				
 			}
 		}
 	}
@@ -240,16 +236,12 @@
 		// transition-delay: 600ms;
 	}
 
-	
 	&.c-grid_media {
-
-
-			.c-grid_item:hover .image img {
-				transform: none;
-			}
+		.c-grid_item:hover .image img {
+			transform: none;
+		}
 		.c-grid_item::after {
 			display: none;
 		}
 	}
-
 }
