--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -1,24 +1,43 @@
 .o-single-project {
 	.o-hero {
 		.o-container {
-			min-height: 80vw;
-			max-height: 100vh;
-			display: flex;
-			align-items: center;
+			height: calc(100vh - $headerHeight);
 
-			@include media("<=tablet") {
-				flex-direction: column;
-				align-items: flex-start;
+			@include media("<=phoneL") {
+				height: 200vw;
+			}
 
-				.o-hero_text {
-					margin-top: $space-xxxl;
-					margin-bottom: $space-sm;
-					width: 100%;
+			&_inner {
+				display: flex;
+				align-items: center;
+				justify-content: flex-end;
+				position: relative;
+				height: 100%;
+
+				@include media("<=tablet") {
+					flex-direction: column;
+					align-items: flex-start;
+					justify-content: flex-start;
+
+					.o-hero_text {
+						position: static;
+						transform: none !important;
+						margin-bottom: $space-sm;
+						width: 100%;
+					}
+
+					.o-hero_image {
+						width: 100%;
+						height: 120vw;
+						max-height: 100%;
+						margin-left: 0;
+					}
 				}
 
-				.o-hero_image {
-					width: 100%;
-					height: 120vw;
+				@include media("<=phoneL") {
+					.o-hero_image {
+						opacity: 0;
+					}
 				}
 			}
 		}
@@ -26,12 +45,23 @@
 		&_text {
 			margin-right: 4vw;
 			width: 50%;
+			position: absolute;
+			bottom: 2vw;
+			left: 0;
+
+			.c-line {
+				transform: translateY(100%);
+				opacity: 0;
+			}
 		}
 
 		&_image {
 			width: 50%;
 			overflow: hidden;
 			height: 50vw;
+			max-height: 700px;
+			max-width: 600px;
+			margin-left: 2rem;
 
 			img {
 				width: 100%;
@@ -114,8 +144,71 @@
 		@include media("<=tablet") {
 			.c-grid_media {
 				grid-gap: $space-sm;
-				.c-grid_item {
-					height: 110vw !important;
+			}
+		}
+	}
+
+	.o-details {
+		.o-container {
+			display: flex;
+			align-items: flex-start;
+
+			@include media("<=phoneL") {
+				flex-direction: column;
+			}
+
+			.o-h3:first-of-type p {
+				margin-top: 0;
+			}
+
+			> * {
+				flex: 50%;
+			}
+
+			.work {
+				margin-top: $space-md;
+			}
+		}
+	}
+
+	.o-next {
+		background-color: darken($light, 10%);
+
+		.c-link:hover .c-arrow {
+			transform: translateX(20%);
+		}
+
+		.c-arrow {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 10rem;
+			transition: 400ms ease;
+			transition-delay: 100ms;
+		}
+
+		.o-container .c-link .c-link_inner {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			height: 30vw;
+			max-height: 500px;
+			position: relative;
+
+			.o-next_title,
+			.o-next_subtitle {
+				position: relative;
+				display: table;
+			}
+
+			.o-next_subtitle {
+				align-self: flex-end;
+				font-size: 5vw;
+				line-height: 5vw;
+
+				@include media(">=desktop") {
+					font-size: 4rem;
+					line-height: 4rem;
 				}
 			}
 		}
@@ -135,177 +228,3 @@
 		transform: scaleX(1);
 	}
 }
-
-// .o-single-project {
-// 	.o-hero {
-// 		display: flex;
-// 		align-items: center;
-// 		justify-content: space-between;
-// 		position: relative;
-
-// 		.o-h2 {
-// 			position: absolute;
-// 		}
-
-// 		&_image-wrapper {
-// 			overflow: hidden;
-// 			width: 40vw;
-// 			height: 50vw;
-// 			margin-left: auto;
-// 			max-width: 600px;
-// 			max-height: 700px;
-
-// 			img {
-// 				height: 100%;
-// 				width: 100%;
-// 				object-fit: cover;
-// 			}
-// 		}
-// 	}
-
-// 	.o-hero-2 {
-// 		min-height: 70vh;
-
-// 		.o-hero_text {
-// 			min-height: 70vh;
-// 			display: flex;
-// 			align-items: flex-start;
-// 			justify-content: center;
-// 			flex-direction: column;
-
-// 			h2 {
-// 				text-transform: uppercase;
-// 			}
-// 		}
-// 	}
-
-// 	.o-container:nth-child(2) {
-// 		position: relative;
-// 		.half-bg {
-// 			position: absolute;
-// 			left: 0;
-// 			top: 0;
-// 			z-index: 1;
-// 			width: 100%;
-// 			height: 50%;
-// 		}
-// 	}
-
-// 	.o-hero_image-wrapper-2 {
-// 		z-index: 99;
-// 		position: sticky;
-// 	}
-
-// 	.o-info {
-// 		&_overview {
-// 			&_inner {
-// 				position: relative;
-// 				display: flex;
-
-// 				justify-content: space-between;
-// 				align-items: flex-start;
-
-// 				.o-info_overview_intro {
-// 					width: 70%;
-// 					padding-right: 7rem;
-// 				}
-
-// 				.o-info_overview_index {
-// 					width: 30%;
-// 					display: grid;
-// 					grid-template-columns: repeat(6, 1fr);
-
-// 					> div {
-// 						flex-grow: 1;
-// 						grid-column: span 3;
-// 					}
-// 				}
-
-// 				@include media("<=tablet") {
-// 					flex-direction: column;
-
-// 					.o-info_overview_intro {
-// 						padding-right: 0;
-// 					}
-
-// 					.o-info_overview_intro {
-// 						width: 100%;
-// 					}
-
-// 					.o-info_overview_index {
-// 						width: 50%;
-// 						margin-top: 2rem;
-// 					}
-// 				}
-// 			}
-// 		}
-
-// 		&_line {
-// 			width: 8%;
-// 			border-top: 2px solid $dark;
-// 		}
-// 	}
-
-// 	.o-next_title {
-// 		font-size: 3rem;
-// 		position: relative;
-// 		font-family: 'Courier';
-
-// 		&::after {
-// 			position: absolute;
-// 			bottom: 0;
-// 			left: 0;
-// 			width: 100%;
-// 			height: 1px;
-// 			background-color: $light;
-// 			content: "";
-// 			transform-origin: left;
-// 			transform: scaleX(0);
-// 			transition: $transition;
-// 		}
-// 	}
-
-// 	.c-link {
-// 		padding: 0 4rem;
-// 		height: 40vh;
-// 		display: block;
-// 		display: flex;
-// 		align-items: center;
-// 		justify-content: space-between;
-
-// 		&:hover .c-arrow_svg:first-child {
-// 			animation: arrowOut 600ms ease forwards;
-// 		}
-// 		&:hover .c-arrow_svg:nth-child(2) {
-// 			animation: arrowIn 600ms ease forwards;
-// 			animation-delay: 300ms;
-// 		}
-// 		&:hover .o-next_title::after {
-// 			transform: scaleX(1);
-// 		}
-// 	}
-
-// 	.c-arrow {
-// 		width: 10rem;
-// 		height: 100%;
-// 	}
-
-// 	.o-additional-media .c-grid_item:hover {
-// 		img {
-// 			transform: none
-// 		}
-// 	}
-// }
-
-// .o-hero_image-wrapper-2,
-// s, .o-info_image-wrapper {
-// 	overflow: hidden;
-// 	width: 100%;
-// 	height: 60vw;
-
-// 	img {
-// 		height: 100%;
-// 		width: 100%;
-// 		object-fit: cover;
-// 	}
-// }
