--- a/src/components/ImageRevealer/c-img-revealer.scss
+++ b/src/components/ImageRevealer/c-img-revealer.scss
@@ -19,7 +19,7 @@
 	transition: 600ms ease;
 	transform-origin: center;
 
-	@include media("<=phoneL") {
+	@include media("<=tablet") {
 		display: none;
 	}
 }
