--- a/src/components/Footer/c-footer.scss
+++ b/src/components/Footer/c-footer.scss
@@ -13,8 +13,19 @@
 		position: relative;
 		flex-direction: column;
 
+		&_contact {
+			display: flex;
+			flex-direction: column;
+
+			h3 {
+				margin-bottom: 0;
+			}
+		}
+
 		.c-arrow-button {
 			align-self: flex-start;
+			width: 3rem;
+			height: 3rem;
 		}
 
 		> div {
