--- a/src/components/Stories/c-stories.scss
+++ b/src/components/Stories/c-stories.scss
@@ -2,6 +2,11 @@
 	width: 70vw;
 	margin: 0 auto;
 
+	@include media("<=tablet") {
+		max-width: 100%;
+		width: 100%;
+	}
+
 	&_main {
 		display: flex;
 		align-items: center;
@@ -9,6 +14,9 @@
 		position: relative;
 		height: 40vw;
 		overflow: hidden;
+
+
+	
 	}
 
 	&_indicator,
