--- a/src/components/Pages/Home/o-home_how.scss
+++ b/src/components/Pages/Home/o-home_how.scss
@@ -2,11 +2,16 @@
 	width: 30vw;
 }
 
-.c-note {
-	@include media("<=phoneL") {
-		display: none;
+.o-page_home {
+	.o-how {
+		.o-h1 {
+			margin: 0 auto;
+			text-align: center;
+		}
 	}
+}
 
+.c-note {
 	position: absolute;
 
 	> div {
@@ -50,27 +55,52 @@
 	svg {
 		height: 100%;
 	}
+
+	@include media("<=tablet") {
+		&_clef {
+			top: 15vw;
+			height: 12vw;
+		}
+
+		&_whole {
+			height: 9vw;
+			top: 35vw;
+			right: -8vw;
+		}
+
+		&_quarter {
+			height: 18vw;
+			top: 150vw;
+			left: -2vw;
+			transform: rotate(30deg) !important;
+		}
+
+		&_half {
+			height: 18vw;
+			top: 100vw;
+			left: -2vw;
+			transform: rotate(30deg) !important;
+		}
+	}
 }
 
 .title,
 .body {
 	width: 17vw;
-
 }
 
-.title, .title p {
-	
-		font-size: 4.167vw;
-		line-height: 4.167vw;
-		margin: 2vw 0;
-		p {
-			margin: 0;
-		}
-	
+.title,
+.title p {
+	font-size: 4.167vw;
+	line-height: 4.167vw;
+	margin: 2vw 0;
+	p {
+		margin: 0;
+	}
 }
 
 .body {
-	font-family: 'Riposte';
+	font-family: "Riposte";
 	font-size: 1.2vw;
 	line-height: 1.5vw;
 
@@ -119,8 +149,6 @@
 		gap: 0;
 	}
 
-
-
 	&_item {
 		grid-column: span 3;
 		z-index: 99;
@@ -160,9 +188,10 @@
 			margin-bottom: 8vw;
 		}
 
-		.title, .title p {
-			font-size: 8vw;
-			line-height: 8vw;
+		.title,
+		.title p {
+			font-size: 13vw;
+			line-height: 13vw;
 		}
 
 		&_sheet {
