--- a/src/styles/scss/objects/o-h2.scss
+++ b/src/styles/scss/objects/o-h2.scss
@@ -1,6 +1,17 @@
 
 
+.o-page_home {
+  .o-h2 {
+    font-size: 4.167vw;
+    line-height: 4.167vw;
 
+  }
+
+  .c-stories p {
+    font-size: 2.3vw;
+    line-height: 2.7vw;
+  }
+}
 
 @media (min-width:700px) and (max-width:1599px) {
   .o-h2,
@@ -30,5 +41,5 @@
 	}
 
 
-}
+} 
 
