--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -23,9 +23,7 @@
 						position: static;
 						transform: none !important;
 						margin: $space-xl 0;
-
 						width: 100%;
-						
 					}
 
 					.o-hero_image {
@@ -51,11 +49,10 @@
 			bottom: 2vw;
 			left: 0;
 			opacity: 0;
-
-			.c-line {
-				transform: translateY(100%);
-				opacity: 0;
-			}
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			justify-content: center;
 		}
 
 		&_image {
@@ -119,10 +116,10 @@
 			position: relative;
 			overflow: hidden;
 
-			&.is-inview .item-revealer {
-				animation-delay: 300ms;
-				animation: imageAnimation 3s ease forwards;
-			}
+			// &.is-inview .item-revealer {
+			// 	animation-delay: 300ms;
+			// 	animation: imageAnimation 3s ease forwards;
+			// }
 
 			.item-revealer {
 				position: absolute;
