--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -16,7 +16,7 @@
 @import "../../components/Menu/c-menu.scss";
 @import "../../components/CursorFollower/c-follower.scss";
 @import "../../components/Vector/c-arrow.scss";
-@import "../../components/Vector/c-frame.scss";
+// @import "../../components/Vector/c-frame.scss";
 @import "../../components/Vector/svg.scss";
 @import "../../components/Footer/c-footer.scss";
 @import "../../components/Pages/Home/o-home_how.scss";
@@ -24,11 +24,13 @@
 @import "../../components/Pages/Home/o-home_work.scss";
 @import "../../components/Pages/Home/o-home_hero.scss";
 @import "../../components/Pages/SingleProject/o-single-project.scss";
+@import "../../components/Pages/Contact/o-page_contact.scss";
 @import "../../components/Lists/c-list.scss";
 @import "../../components/Transition/c-transition-card.scss";
 @import "../../components/Stories/c-stories.scss";
 @import "../../components/Button/c-arrow-button.scss";
 @import "../../components/ImageRevealer/c-img-revealer.scss";
+@import "../../components/Figure/c-figure.scss";
 
 
 
