--- a/src/styles/scss/objects/o-text.scss
+++ b/src/styles/scss/objects/o-text.scss
@@ -8,9 +8,8 @@
 }
 
 .-text-big {
-	font-size: 4rem;
+	font-size: 3w;
 	font-family: "Canela" !important;
-
 	line-height: 5rem;
 
 	@include media("<=tablet") {
