--- a/src/styles/scss/objects/o-h3.scss
+++ b/src/styles/scss/objects/o-h3.scss
@@ -1,9 +1,11 @@
 h3, .o-h3 {
-  font-size: 1.6rem;
+  font-size: 4.167vw;
+  font-size: 4.167vw;
+  
   font-family: 'Canela';
 
-  @include media("<=tablet") {
-    font-size: 1.2rem !important;
-    line-height: 1.3rem !important;
+  @include media("<=phoneL") {
+    font-size: 5vw!important;
+    line-height: 5vw !important;
   }
 }
