--- a/src/components/Pages/Home/o-home_how.scss
+++ b/src/components/Pages/Home/o-home_how.scss
@@ -166,9 +166,9 @@
 				0.94
 			); /* easeOutQuad */
 
-			&.is-inview {
-				width: 100%;
-			}
+			// &.is-inview {
+			// 	width: 100%;
+			// }
 		}
 	}
 
