--- a/src/components/Pages/Home/o-home_work.scss
+++ b/src/components/Pages/Home/o-home_work.scss
@@ -20,14 +20,12 @@
 		background-size: cover;
 		background-position: center;
 		position: absolute !important;
-		top:20vw;
+		top: 20vw;
 		left: 20vw;
 		width: 28vw;
 		height: 36vw;
 		overflow: hidden;
 		display: block;
-
-
 
 		.card-info {
 			position: absolute;
@@ -37,8 +35,6 @@
 			height: 100%;
 			padding: 2vw;
 			color: $light;
-			
-			
 
 			* {
 				transform: translateY(50%);
@@ -46,45 +42,48 @@
 				transition: $transition;
 			}
 
-			h3, p {
+			h3,
+			p {
 				margin: 0;
 			}
 		}
 
-
-		&:hover .c-figure::after {
+		&:hover .c-figure_inner::after {
 			opacity: 0.4;
 		}
-
 
 		&:hover .card-info * {
 			opacity: 1;
 			transform: translateY(0);
 		}
-		
 
+		&:hover .c-figure {
+			transform: scale(1.2);
+		}
 
 		.c-figure {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
 			position: relative;
+			transition: $transition-zoom;
 
-			&::after {
-				position: absolute;
-				top: 0;
-				left: 0;
-				content: '';
-				background-color: black;
-				opacity: 0;
-				width: 100%;
-				height: 100%;
-				transition: $transition;
+			&_inner {
+				&::after {
+					position: absolute;
+					top: 0;
+					left: 0;
+					content: "";
+					background-color: black;
+					opacity: 0;
+					width: 100%;
+					height: 100%;
+					transition: $transition;
+				}
 			}
-	
-			
+
 		}
-		
+
 		&_1 {
 			z-index: 99;
 		}
@@ -100,8 +99,6 @@
 			top: 20vw;
 			display: none;
 		}
-		
-
 
 		figure {
 			object-fit: cover;
@@ -112,18 +109,16 @@
 		}
 		// transform-origin: center;
 
-
-
 		// &_2 {
 		// 	left: 28vw;
 		// 	top: 10vw;
-	
+
 		// }
 
 		// &_3 {
 		// 	left: 12vw;
 		// 	top: 25vw;
-	
+
 		// }
 	}
 }
