--- a/src/components/Figure/c-figure.scss
+++ b/src/components/Figure/c-figure.scss
@@ -3,6 +3,23 @@
 	overflow: hidden;
 	margin: 0;
 
+	&.-scale-reveal {
+		&::after {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			content: "";
+			background: none;
+			transform: scale(0.1);
+			box-shadow: 20px 20px 20px 4000vw $light;
+			transform-origin: center;
+			animation: figureReveal 7s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+			// animation-delay: 200ms;
+		}
+	}
+
 	img {
 		width: 100%;
 		height: 100%;
