--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -16,7 +16,6 @@
 		display: flex;
 		flex-direction: column;
 		align-items: stretch;
-		transform: translateY(50%);
 		opacity: 1;
 
 		&:hover::after {
@@ -40,8 +39,6 @@
 			opacity: 0;
 		}
 
-
-
 		&_loader {
 			position: absolute;
 			top: 0;
@@ -63,7 +60,7 @@
 		// }
 
 		&:hover .c-grid_img {
-			transform: scale(1.1);
+			transform: scale(1.2);
 		}
 
 		&:first-child,
@@ -174,7 +171,7 @@
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
-			transition: $transition;
+			transition: $transition-zoom;
 		}
 	}
 
