--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -1,4 +1,13 @@
 .o-single-project {
+
+
+	.c-figure {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+	}
+
 	.o-hero {
 		.o-container {
 			height: calc(100vh - $headerHeight);
@@ -62,6 +71,7 @@
 			max-height: 700px;
 			max-width: 600px;
 			margin-left: 2rem;
+			
 
 			img {
 				width: 100%;
