--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -24,7 +24,7 @@ $space-xxxl: calc(7 * 2rem);
 }
 
 //Colors
-$light: #f6f5f1;
+$light: #F4F1E9;
 $dark: #181818;
 $dark2: #2e2e2e;
 $lighterDark: #111111;
