--- a/src/components/Menu/c-menu.scss
+++ b/src/components/Menu/c-menu.scss
@@ -6,7 +6,7 @@
 	width: 100vw;
 	display: block;
 	z-index: 999;
-	transform: scaleY(0.0001);
+	transform: translateY(-100%);
 	transform-origin: top;
 	transition: 600ms ease;
 	padding-top: $headerHeight;
@@ -14,7 +14,7 @@
 	transition: $transition-menu;
 
 	&.is-active {
-		transform: scaleY(1);
+		transform: translateY(0)
 	}
 
 	&_nav {
@@ -32,17 +32,12 @@
 			
 			li {
 				opacity: 0;
+				transform: translateY(150%);
 
 				&:not(:last-child) {
 					margin-bottom: 3rem;
 				}
 
-				&:nth-of-type(2) {
-					transition-delay: 100ms;
-				}
-				&:nth-of-type(3) {
-					transition-delay: 200ms;
-				}
 			}
 
 			li .c-link {
