--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -10,8 +10,8 @@
 
 	.o-hero {
 
-		.c-figure.-scale-reveal::after {
-			animation-delay: 3s;
+		.c-figure.-figure-zoom img {
+			animation-delay: 2s;
 		}
 
 		.o-container {
