--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -8,6 +8,80 @@
 	grid-template-columns: repeat(12, 1fr);
 	grid-row-gap: 10vw;
 
+	.c-frame {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: scale(0.9) rotate(-5deg);
+		transform-origin: center;
+		
+		transition: all 1s cubic-bezier(1.000, 0.000, 0.000, 1.000);;
+
+		&_svg_yellow, &_svg_blue {
+			transform: scaleY(0.01);
+			transition: all 1s cubic-bezier(1.000, 0.000, 0.000, 1.000);;
+			opacity: 0;
+		}
+
+		&_svg_green, &_svg_red {
+			transform: scaleX(0.01);
+			transition: all 1s cubic-bezier(1.000, 0.000, 0.000, 1.000);;
+			opacity: 0;
+		}
+
+		&_svg_green {
+			width: 100%;
+			transform-origin: left;
+			opacity: 0;
+
+			path {
+				fill: $green;
+			}
+		}
+
+		&_svg_yellow {
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			transform-origin: top;
+			transition-delay: 200ms;
+
+			path {
+				fill: $yellow;
+				position: relative;
+			}
+		}
+
+		&_svg_blue {
+			transform-origin: top;
+			height: 100%;
+			position: absolute;
+			right: 0;
+			top: 0;
+			transition-delay: 350ms;
+
+			path {
+				fill: $blue;
+			}
+		}
+
+		&_svg_red {
+			width: 100%;
+			position: absolute;
+			right: 0;
+			bottom: 0;
+			transform-origin: left;
+			transition-delay: 100ms;
+
+			path {
+				fill: $red;
+			}
+		}
+	}
+
 	@include media("<=tablet") {
 		grid-row-gap: $space-sm;
 	}
@@ -19,11 +93,29 @@
 		opacity: 0;
 		position: relative;
 
+		&:hover .c-frame {
+			transform: rotate(0) scale(1.1);
+			opacity: 1;
+		}
+
+		&:hover .c-frame {
+			&_svg_yellow, &_svg_blue {
+				opacity: 1;
+				transform: scaleY(1);
+				
+			}
+	
+			&_svg_green, &_svg_red {
+				opacity: 1;
+				transform: scaleX(1);
+				
+			}
+		}
+
 		.c-link {
 			width: 100%;
 			height: 100%;
 			display: block;
-			overflow: hidden;
 		}
 
 		&:hover::after {
