--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -21,6 +21,11 @@
 }
 
 @font-face {
+	font-family: "Dahlia";
+	src: url("../assets/fonts/Dahlia-Regular.woff");
+}
+
+@font-face {
 	font-family: "Canela";
 	src: url("../assets/fonts/Canela-Medium-Trial.otf");
 	font-weight: 500;
