--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -31,6 +31,7 @@
 @import "../../components/Button/c-arrow-button.scss";
 @import "../../components/ImageRevealer/c-img-revealer.scss";
 @import "../../components/Figure/c-figure.scss";
+@import "../../components/Vector/c-frame.scss";
 
 
 
