--- a/src/components/Stories/c-stories.scss
+++ b/src/components/Stories/c-stories.scss
@@ -15,6 +15,19 @@
 	margin: 0 auto;
 	position: relative;
 
+	.c-frame {
+
+		height: 40vw;
+		top:-2.2vw;
+		width: 70vw;
+		transform: scale(1.2);
+
+		svg path {
+			fill: $yellow !important;
+		}
+		
+	}
+
 	&_mobile-bg {
 		position: absolute;
 		top: 50%;
