--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -171,6 +171,10 @@
 		transform: scaleX(1);
 		transform-origin: left;
 	}
+	&:hover::after {
+		transform: scaleX(1);
+		transform-origin: left;
+	}
 }
 
 .-hover-underline-label {
