--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -76,8 +76,7 @@ $bodyFont: "Soehne Body";
 //Header vars
 $headerHeight: 75px;
 
-//Footer vars
-$footerHeight: 60vh;
+$footerHeight: 80vw;
 
 //Breakpoints
 $tablet: 820px;
