--- a/src/components/Button/c-arrow-button.scss
+++ b/src/components/Button/c-arrow-button.scss
@@ -11,10 +11,16 @@
 	border-radius: 50%;
 	overflow: hidden;
 	position: relative;
+	transition: $transition;
+	
 
 	@include media("<=tablet") {
 		width: 3rem;
 		height: 3rem;
+	}
+
+	&:hover {
+		opacity: 1;
 	}
 
 	&:hover::after {
@@ -47,7 +53,6 @@
 			position: static;
 			transform: scale(0.001);
 			transform-origin: center;
-
 			fill: $dark;
 		}
 
