--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -1,6 +1,4 @@
 .o-single-project {
-
-
 	.c-figure {
 		width: 100%;
 		height: 100%;
@@ -9,9 +7,16 @@
 	}
 
 	.o-hero {
-
 		.c-figure.-figure-zoom img {
 			animation-delay: 2s;
+		}
+
+		.c-figure .c-frame {
+			@include frameRevealDefaultStyles();
+		}
+
+		.c-figure.-frame-reveal .c-frame {
+			@include frameReveal(2s);
 		}
 
 		.o-container {
@@ -28,7 +33,7 @@
 				position: relative;
 				height: 100%;
 
-				@include media("<=tablet") {
+				@include media("<=phoneL") {
 					flex-direction: column;
 					align-items: flex-start;
 					justify-content: flex-start;
@@ -42,15 +47,9 @@
 
 					.o-hero_image {
 						width: 100%;
-						height: 120vw;
+						height: 110vw;
 						max-height: 100%;
 						margin-left: 0;
-					}
-				}
-
-				@include media("<=phoneL") {
-					.o-hero_image {
-						opacity: 0;
 					}
 				}
 			}
@@ -71,12 +70,10 @@
 
 		&_image {
 			width: 50%;
-			overflow: hidden;
 			height: 50vw;
 			max-height: 700px;
 			max-width: 600px;
 			margin-left: 2rem;
-			
 
 			img {
 				width: 100%;
@@ -186,17 +183,6 @@
 		}
 	}
 
-	.o-next_candidate .c-arrow {
-		top: 0 !important;
-		right:  0 !important;
-		z-index: 999;
-		fill: $light;
-		stroke: $light;
-		stroke-width: 2px;
-	}
-
-
-
 	.o-next {
 		.marquee-item {
 			margin-right: 10vw;
@@ -206,13 +192,20 @@
 			transform: translateX(20%);
 		}
 
+		h2 {
+			padding-bottom: 0;
+		}
+
 		.c-arrow {
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			width: 10rem;
+			width: 20vw;
+			max-width: 10rem;
+			height: auto;
 			transition: 400ms ease;
 			transition-delay: 100ms;
+		}
+
+		.marquee {
+			padding-top: 17vw;
 		}
 
 		.o-container .c-link .c-link_inner {
@@ -244,6 +237,20 @@
 }
 
 @keyframes imageAnimation {
+	0% {
+		transform: scale(0.3);
+	}
+
+	50% {
+		transform: scaleY(1);
+	}
+
+	100% {
+		transform: scaleX(1);
+	}
+}
+
+@keyframes revealFrame {
 	0% {
 		transform: scale(0.3);
 	}
