--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -15,7 +15,7 @@
 @import "../../components/Header/c-header.scss";
 @import "../../components/Link/c-link.scss";
 @import "../../components/Menu/c-menu.scss";
-@import "../../components/CursorFollower/c-follower.scss";
+// @import "../../components/CursorFollower/c-follower.scss";
 @import "../../components/Vector/c-arrow.scss";
 // @import "../../components/Vector/c-frame.scss";
 @import "../../components/Vector/svg.scss";
@@ -34,6 +34,7 @@
 @import "../../components/Figure/c-figure.scss";
 @import "../../components/Vector/c-frame.scss";
 @import "../../components/Slider/o-slider.scss";
+@import "../../components/Cursors/c-cursor.scss";
 
 
 
