--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -18,74 +18,74 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transform: scale(0.9) rotate(-5deg);
 		transform-origin: center;
+		
 
-		transition: all 1s cubic-bezier(1, 0, 0, 1);
+		// transition: all 1s cubic-bezier(1, 0, 0, 1);
 
-		&_svg_yellow,
-		&_svg_blue {
-			transform: scaleY(0.01);
-			transition: all 1s cubic-bezier(1, 0, 0, 1);
-			opacity: 0;
-		}
+		// &_svg_yellow,
+		// &_svg_blue {
+		// 	transform: scaleY(0.01);
+		// 	transition: all 1s cubic-bezier(1, 0, 0, 1);
+		// 	opacity: 0;
+		// }
 
-		&_svg_green,
-		&_svg_red {
-			transform: scaleX(0.01);
-			transition: all 1s cubic-bezier(1, 0, 0, 1);
-			opacity: 0;
-		}
+		// &_svg_green,
+		// &_svg_red {
+		// 	transform: scaleX(0.01);
+		// 	transition: all 1s cubic-bezier(1, 0, 0, 1);
+		// 	opacity: 0;
+		// }
 
-		&_svg_green {
-			width: 100%;
-			transform-origin: left;
-			opacity: 0;
+		// &_svg_green {
+		// 	width: 100%;
+		// 	transform-origin: left;
+		// 	opacity: 0;
 
-			path {
-				fill: $green;
-			}
-		}
+		// 	path {
+		// 		fill: $green;
+		// 	}
+		// }
 
-		&_svg_yellow {
-			height: 100%;
-			position: absolute;
-			left: 0;
-			top: 0;
-			transform-origin: top;
-			transition-delay: 200ms;
+		// &_svg_yellow {
+		// 	height: 100%;
+		// 	position: absolute;
+		// 	left: 0;
+		// 	top: 0;
+		// 	transform-origin: top;
+		// 	transition-delay: 200ms;
 
-			path {
-				fill: $yellow;
-				position: relative;
-			}
-		}
+		// 	path {
+		// 		fill: $yellow;
+		// 		position: relative;
+		// 	}
+		// }
 
-		&_svg_blue {
-			transform-origin: top;
-			height: 100%;
-			position: absolute;
-			right: 0;
-			top: 0;
-			transition-delay: 350ms;
+		// &_svg_blue {
+		// 	transform-origin: top;
+		// 	height: 100%;
+		// 	position: absolute;
+		// 	right: 0;
+		// 	top: 0;
+		// 	transition-delay: 350ms;
 
-			path {
-				fill: $blue;
-			}
-		}
+		// 	path {
+		// 		fill: $blue;
+		// 	}
+		// }
 
-		&_svg_red {
-			width: 100%;
-			position: absolute;
-			right: 0;
-			bottom: 0;
-			transform-origin: left;
-			transition-delay: 100ms;
+		// &_svg_red {
+		// 	width: 100%;
+		// 	position: absolute;
+		// 	right: 0;
+		// 	bottom: 0;
+		// 	transform-origin: left;
+		// 	transition-delay: 100ms;
 
-			path {
-				fill: $red;
-			}
-		}
+		// 	path {
+		// 		fill: $red;
+		// 	}
+		// }
 	}
 
 	@include media("<=tablet") {
@@ -99,24 +99,26 @@
 		opacity: 0;
 		position: relative;
 
-		&:hover .c-frame {
-			transform: rotate(0) scale(1.1);
-			opacity: 1;
-		}
 
-		&:hover .c-frame {
-			&_svg_yellow,
-			&_svg_blue {
-				opacity: 1;
-				transform: scaleY(1);
-			}
 
-			&_svg_green,
-			&_svg_red {
-				opacity: 1;
-				transform: scaleX(1);
-			}
-		}
+		// &:hover .c-frame {
+		// 	transform: rotate(0) scale(1.1);
+		// 	opacity: 1;
+		// }
+
+		// &:hover .c-frame {
+		// 	&_svg_yellow,
+		// 	&_svg_blue {
+		// 		opacity: 1;
+		// 		transform: scaleY(1);
+		// 	}
+
+		// 	&_svg_green,
+		// 	&_svg_red {
+		// 		opacity: 1;
+		// 		transform: scaleX(1);
+		// 	}
+		// }
 
 		.c-link {
 			width: 100%;
