--- a/src/components/Vector/c-frame.scss
+++ b/src/components/Vector/c-frame.scss
@@ -6,74 +6,73 @@
 	height: 100%;
 	transform-origin: center;
 
+	&_svg_green {
+		width: 100%;
+		transform-origin: left;
 
-  &_svg_green {
-    width: 100%;
-    transform-origin: left;
-    
-
-    path {
-      fill: $green;
-    }
-  }
-
-  &_svg_yellow {
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform-origin: top;
-    transition-delay: 200ms;
-
-    path {
-      fill: $yellow;
-      position: relative;
-    }
-  }
-
-  &_svg_blue {
-    transform-origin: top;
-    height: 100%;
-    position: absolute;
-    right: 0;
-    top: 0;
-    transition-delay: 350ms;
-
-    path {
-      fill: $blue;
-    }
-  }
-
-  &_svg_red {
-    width: 100%;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    transform-origin: left;
-    transition-delay: 100ms;
-
-    path {
-      fill: $red;
-    }
-  }
-
-	&.c-frame_hover {
-		transition: all 1s cubic-bezier(1, 0, 0, 1);
-    transform: scale(0.9) rotate(-5deg);
-
-		&_svg_yellow,
-		&_svg_blue {
-			transform: scaleY(0.01);
-			transition: all 1s cubic-bezier(1, 0, 0, 1);
-			opacity: 0;
+		path {
+			fill: $green;
 		}
+	}
 
-		&_svg_green,
-		&_svg_red {
-			transform: scaleX(0.01);
-			transition: all 1s cubic-bezier(1, 0, 0, 1);
-			opacity: 0;
+	&_svg_yellow {
+		height: 100%;
+		position: absolute;
+		left: 0;
+		top: 0;
+		transform-origin: top;
+		transition-delay: 200ms;
+
+		path {
+			fill: $yellow;
+			position: relative;
 		}
+	}
 
+	&_svg_blue {
+		transform-origin: top;
+		height: 100%;
+		position: absolute;
+		right: 0;
+		top: 0;
+		transition-delay: 350ms;
+
+		path {
+			fill: $blue;
+		}
+	}
+
+	&_svg_red {
+		width: 100%;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		transform-origin: left;
+		transition-delay: 100ms;
+
+		path {
+			fill: $red;
+		}
 	}
 }
+
+.-hover-frame:hover .c-frame {
+	transform: rotate(0)scale(1.1);
+	opacity: 1;
+
+	&_svg {
+		transform: scaleX(1)scaleY(1);
+    opacity: 1;
+	}
+}
+
+.-hover-frame .c-frame {
+	transition: $transition-zoom;
+
+	&_svg {
+		transition: 1s cubic-bezier(1, 0, 0, 1);
+	}
+	@include frameRevealDefaultStyles();
+}
+
+
