--- a/src/styles/scss/_animations.scss
+++ b/src/styles/scss/_animations.scss
@@ -27,7 +27,7 @@
 
 @keyframes imageZoom {
 	0% {
-		transform: scale(0.8)
+		transform: scale(0.8);
 	}
 
 	100% {
@@ -55,10 +55,30 @@
 	}
 }
 
+@keyframes frameHideY {
+	to {
+		transform: scaleY(0);
+		opacity: 0;
+	}
+}
+
+@keyframes frameHideX {
+	to {
+		transform: scaleX(0);
+		opacity: 0;
+	}
+}
+
 @keyframes frameScale {
 	to {
-		transform: rotate(0deg)scale(1.1);
+		transform: rotate(0deg) scale(1.1);
 		opacity: 1;
+	}
+}
 
+@keyframes frameHide {
+	to {
+		transform: rotate(-15deg) scale(0.8);
+		opacity: 0;
 	}
 }
