--- a/src/styles/scss/_mixins.scss
+++ b/src/styles/scss/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin frameRevealDefaultStyles() {
-	transform: scale(0.9) rotate(-5deg);
+	transform: scale(0.9) rotate(-15deg);
 
 	&_svg_yellow,
 	&_svg_blue {
@@ -16,8 +16,9 @@
 	}
 }
 
-@mixin frameReveal($delay) {
+@mixin frameReveal($delay, $animationDirection) {
 	animation: frameScale $transition-zoom forwards;
+	animation-direction: $animationDirection;
 	animation-delay: $delay;
 
 	&_svg_yellow,
@@ -46,7 +47,39 @@
 		animation-delay: $delay + 400ms;
 	}
 
+	&_svg_blue {
+		animation-delay: $delay + 350ms;
+	}
+}
+@mixin frameHide($delay) {
+	animation: frameHide $transition-zoom forwards;
+	animation-delay: $delay;
 
+	&_svg_yellow,
+	&_svg_blue {
+		// transform: scaleY(0.01);
+		animation: frameHideY 1s cubic-bezier(1, 0, 0, 1) forwards;
+		opacity: 0;
+	}
+
+	&_svg_green,
+	&_svg_red {
+		// transform: scaleX(0.01);
+		animation: frameHideX 1s cubic-bezier(1, 0, 0, 1) forwards;
+		opacity: 0;
+	}
+
+	&_svg_green {
+		animation-delay: $delay;
+	}
+
+	&_svg_yellow {
+		animation-delay: $delay + 100ms;
+	}
+
+	&_svg_red {
+		animation-delay: $delay + 400ms;
+	}
 
 	&_svg_blue {
 		animation-delay: $delay + 350ms;
