--- a/src/components/Slider/o-slider.scss
+++ b/src/components/Slider/o-slider.scss
@@ -2,35 +2,37 @@ $sliderHeight: 40vw;
 $sliderWidth: 180vw;
 
 .o-slider {
+	height: $sliderHeight;
 
-  height: $sliderHeight;
+	&_inner {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: $sliderWidth;
+		padding: 0 $space-lg;
+	}
 
-  &_inner {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: $sliderWidth;
-    padding: 0 $space-lg;
-  }
+	&_item {
+		width: 30vw;
+		height: $sliderHeight;
+    overflow: hidden;
+	}
 
-  &_item {
-    
-    width: 30vw;
-    height: $sliderHeight;
-  }
+	&_image {
+		width: 100%;
+		height: 100%;
+		position: relative;
 
-  &_image {
-    width: 100%;
-    height: 100%;
-
-    .c-figure {
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-      object-position: center;
-    }
-  }
+		.c-figure {
+			height: 100%;
+			width: 100%;
+			
+			position: absolute;
+			
+			
+		}
+	}
 }
