--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -28,6 +28,7 @@
 @import "../../components/Pages/Contact/o-page_contact.scss";
 @import "../../components/Lists/c-list.scss";
 @import "../../components/Transition/c-transition-card.scss";
+@import "../../components/Transition/o-intro.scss";
 @import "../../components/Stories/c-stories.scss";
 @import "../../components/Button/c-arrow-button.scss";
 @import "../../components/ImageRevealer/c-img-revealer.scss";
